src/test/incremental/const-generics/hash-tyvid-regression-1.stderr
error[E0277]: the trait bound `[T; _]: From<()>` is not satisfied
  --> $DIR/hash-tyvid-regression-1.rs:9:5
   |
LL |     <[T; N.get()]>::try_from(())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<()>` is not implemented for `[T; _]`
   |
   = note: required because of the requirements on the impl of `Into<[T; _]>` for `()`
   = note: required because of the requirements on the impl of `TryFrom<()>` for `[T; _]`
note: required by `try_from`
  --> $SRC_DIR/core/src/convert/mod.rs:LL:COL
   |
LL |     fn try_from(value: T) -> Result<Self, Self::Error>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/hash-tyvid-regression-1.rs:9:5
   |
LL |     <[T; N.get()]>::try_from(())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found enum `Result`
   |
   = note: expected unit type `()`
                   found enum `Result<[T; _], Infallible>`
help: consider using a semicolon here
   |
LL |     <[T; N.get()]>::try_from(());
   |                                 +
help: try adding a return type
   |
LL | -> Result<[T; _], Infallible> where
   | +++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
